tests/fixtures/fail/no-readonly-missing.ts
// Violates: require-readonly-property, require-readonly-arrays
export type Config = {
    host: string
    port: number
    tags: string[]
}
